sgd/reproduction/playground/objects/SVMXC__Case_Line__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Case Line</description>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMAX_PS_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ケース対象製品</relationshipLabel>
        <relationshipName>SMAX_PS_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Record_Type__c</fullName>
        <formula>IF( SVMXC__Case__r.RecordType.DeveloperName = &quot;SMAX_PS_ServiceCase&quot;, &quot;問合せケース&quot;, &quot;引合ケース&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ケースレコードタイプ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Start_DateTime__c</fullName>
        <formula>SVMXC__Case__r.SMAX_PS_StartDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Status__c</fullName>
        <formula>TEXT(SVMXC__Case__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ケース状況</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Subject__c</fullName>
        <formula>SVMXC__Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>件名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Dislay_Text__c</fullName>
        <formula>IF( SVMXC__Installed_Product__c = null,  SVMXC__Product__r.Name ,  SVMXC__Installed_Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積表示テキスト</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_Account__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_Location__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>設置場所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_SerialNo__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HGS No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_SubLocation__c</fullName>
        <formula>SVMXC__Installed_Product__r.SMAX_PS_ChildLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ベンチ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_PLC__c</fullName>
        <formula>SVMXC__Product__r.SMAX_PS_SAP_PLC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>作業指示</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Detailed problem description</description>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_Exchange_Type__c</fullName>
        <description>Type of exchange allowed as the outcome of entitlement verification.</description>
        <label>Entitled Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement History</label>
        <referenceTo>SVMXC__Entitlement_History__c</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Notes entered by the user during entitlement verification</description>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Status__c</fullName>
        <description>Outcome of entitlement check, if performed</description>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to an existing installed product record</description>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Status__c</fullName>
        <description>Case Line status</description>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Case Line Priority</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Text__c</fullName>
        <description>Product number in text format. Used when product number cannot be resolved to an existing Product record</description>
        <label>Product Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to an existing product record</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity__c</fullName>
        <description>Line quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Route_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the calculated route for the line</description>
        <label>Route Card</label>
        <referenceTo>SVMXC__Route_Card__c</referenceTo>
        <relationshipLabel>Case Lines</relationshipLabel>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number_List__c</fullName>
        <description>List of serial numbers, if applicable</description>
        <label>Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_End_Date__c</fullName>
        <description>Service Contract End Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Service_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per service contract. Created as a formula to run entitlement verification more efficiently</description>
        <formula>TEXT( SVMXC__Installed_Product__r.SVMXC__Service_Contract_Exchange_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Exchange Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Line__c</fullName>
        <description>Latest Service Contract Line from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Service_Contract_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Start_Date__c</fullName>
        <description>Service Contract Start Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Service_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <description>Latest Service Contract from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Service_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Summary__c</fullName>
        <description>Brief summary of the problem with the product</description>
        <label>Problem Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_End_Date__c</fullName>
        <description>Warranty End Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Warranty_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per warranty. Created as a formula to run entitlement verification more efficiently</description>
        <formula>TEXT(SVMXC__Installed_Product__r.SVMXC__Warranty_Exchange_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Exchange Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Start_Date__c</fullName>
        <description>Warranty Start Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Warranty_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <description>Latest warranty from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Warranty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <label>Case Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Check_Close_Case</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 OR ( 
      ISPICKVAL(SVMXC__Case__r.Status, &apos;Closed&apos;), 
      ISPICKVAL(SVMXC__Case__r.Status, &apos;Lost&apos;)
    )
, True, False)</errorConditionFormula>
        <errorMessage>完了・失注ケースを変更できません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_IP_or_Product</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( SVMXC__Product__c = null,  SVMXC__Installed_Product__c =null), true, false)</errorConditionFormula>
        <errorMessage>Installed Productもしくは製品を設定ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Validate_Account</fullName>
        <active>true</active>
        <description>Checking if Account Id of case is equal to Account ID of IP</description>
        <errorConditionFormula>IF(SVMXC__Installed_Product__c  &lt;&gt; null,  IF(SVMXC__Case__r.Account.Id   &lt;&gt;    SVMXC__Installed_Product__r.SVMXC__Company__r.Id 
, true, false) , false)</errorConditionFormula>
        <errorMessage>ケース”取引先名”に関連しているInstalled Productのみ設定してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Validate_Product</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( SVMXC__Installed_Product__c &lt;&gt; null,  SVMXC__Installed_Product__r.SVMXC__Product__c &lt;&gt;  SVMXC__Product__c), true, false)</errorConditionFormula>
        <errorMessage>Installed Productの製品を設定ください。</errorMessage>
    </validationRules>
</CustomObject>